Fixed spacing issue at different screen sizes for listing page hover effect

--- a/public/styles.css
+++ b/public/styles.css
@@ -525,9 +525,9 @@
     }
 
     #ListingDetailsContainer {
-        width: 73.7%;
+        width: 18vw;
         position: relative;
-        top: 105%;
+        top: 100%;
         min-height: 100%;
         left: 13.35%;
         background: rgba(100, 100, 100, 0.5);
@@ -539,7 +539,7 @@
     }
     
     #ListingNameContainer {
-        height: 80%;
+        height: 40%;
     }
 
     #ListingNameText {
@@ -558,9 +558,6 @@
 
     #ListingFavContainer {
         color: lightblue;
-        position: absolute;
-        left: 38.5%;
-        bottom: 2vh;
     }
 
     #ListingFavContainer:hover {
